# gillijimproject

./: CMakeLists.txt  README.md  _history_log.txt  main.cpp  test.wiki
utilities/: FileHandling.cpp  FileHandling.h  Utilities.cpp  Utilities.h
wowfiles/: Adt.cpp  Adt.h  Chunk.cpp  Chunk.h  ChunkHeaders.h  Main.cpp  Main.h  Mcal.cpp  Mcal.h  Mcin.cpp  Mcin.h  Mcnk.cpp  Mcnk.h  Mcrf.cpp  Mcrf.h  Mddf.cpp  Mddf.h  Mh2o.cpp  Mh2o.h  Mhdr.cpp  Mhdr.h  Mmdx.cpp  Mmdx.h  Mmid.cpp  Mmid.h  Modf.cpp  Modf.h  Mphd.cpp  Mphd.h  Mwid.cpp  Mwid.h  Mwmo.cpp  Mwmo.h  Wdl.cpp  Wdl.h  Wdt.cpp  Wdt.h  WowChunkedFormat.cpp  WowChunkedFormat.h
wowfiles/alpha/: AdtAlpha.cpp  AdtAlpha.h  MainAlpha.cpp  MainAlpha.h  McinAlpha.cpp  McinAlpha.h  McnkAlpha.cpp  McnkAlpha.h  McnrAlpha.cpp  McnrAlpha.h  McvtAlpha.cpp  McvtAlpha.h  Mdnm.cpp  Mdnm.h  MhdrAlpha.cpp  MhdrAlpha.h  Monm.cpp  Monm.h  MphdAlpha.cpp  MphdAlpha.h  WdtAlpha.cpp  WdtAlpha.h
wowfiles/cataclysm/: AdtCata.cpp  AdtCata.h  AdtCataObjects.cpp  AdtCataObjects.h  AdtCataTerrain.cpp  AdtCataTerrain.h  AdtCataTextures.cpp  AdtCataTextures.h  McnkCata.cpp  McnkCata.h  McnkCataObj0.cpp  McnkCataObj0.h  McnkCataObjects.cpp  McnkCataObjects.h  McnkCataTerrain.cpp  McnkCataTerrain.h  McnkCataTex0.cpp  McnkCataTex0.h  McnkCataTextures.cpp  McnkCataTextures.h  McnrCata.cpp  McnrCata.h  __Copie de AdtCata_original.cpp
wowfiles/lichking/: AdtLk.cpp  AdtLk.h  McnkLK.cpp  McnkLK.h  McnkLk.cpp  McnkLk.h  McnrLk.cpp  McnrLk.h
